--- a/main/http_server/axe-os/src/app/components/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/components/edit/edit.component.html
@@ -134,11 +134,20 @@
 
         <div class="col-12 md:col-4">
             <div class="field-checkbox">
+                <p-checkbox name="autoscreenoff" formControlName="autoscreenoff" inputId="autoscreenoff"
+                    [binary]="true"></p-checkbox>
+                <label for="autoscreenoff">Automatic screen shutdown</label>
+            </div>
+        </div>
+
+        <div class="col-12 md:col-4">
+            <div class="field-checkbox">
                 <p-checkbox name="invertfanpolarity" formControlName="invertfanpolarity" inputId="invertfanpolarity"
                     [binary]="true"></p-checkbox>
                 <label for="invertfanpolarity">Invert Fan Polarity</label>
             </div>
         </div>
+
         <div class="col-12 md:col-4">
             <div class="field-checkbox">
                 <p-checkbox name="autofanspeed" formControlName="autofanspeed" inputId="autofanspeed"
@@ -158,11 +167,14 @@
                 <p-slider formControlName="fanspeed"></p-slider>
             </div>
         </div>
+
         <div class="mt-2">
             <button pButton [disabled]="form.invalid" (click)="updateSystem()"
                 class="btn btn-primary mr-2">Save</button>
             <b style="line-height: 34px;">You must restart this device after saving for changes to take effect.</b>
         </div>
+
+        
 
 
     </form>
