renamed "stats name" to "prefix"

--- a/main/http_server/axe-os/src/app/components/influxdb/influxdb.component.html
+++ b/main/http_server/axe-os/src/app/components/influxdb/influxdb.component.html
@@ -49,9 +49,9 @@
                 </div>
             </div>
             <div class="field grid p-fluid">
-                <label htmlFor="influxStatsName" class="col-12 mb-2 md:col-2 md:mb-0">Stats Name:</label>
+                <label htmlFor="influxPrefix" class="col-12 mb-2 md:col-2 md:mb-0">Prefix:</label>
                 <div class="col-12 md:col-10">
-                    <input pInputText id="influxStatsName" formControlName="influxStatsName" type="text" />
+                    <input pInputText id="influxPrefix" formControlName="influxPrefix" type="text" />
                 </div>
             </div>
 
