--- a/main/http_server/axe-os/src/app/components/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/components/edit/edit.component.html
@@ -85,6 +85,15 @@
 
         </ng-container>
 
+        <div class="field grid p-fluid">
+            <label htmlFor="overheat_temp" class="col-12 mb-2 md:col-2 md:mb-0">Shutdown Temperature</label>
+            <div class="col-12 md:col-10">
+                <input pInputText id="overheat_temp" formControlName="overheat_temp" type="number" />
+                <div>
+                    <small>Shutdown Temperatur in °C. To turn off use "0"</small>
+                </div>
+            </div>
+        </div>
 
         <div class="col-12 md:col-4">
             <div class="field-checkbox">
@@ -115,14 +124,6 @@
                 <p-checkbox name="autofanspeed" formControlName="autofanspeed" inputId="autofanspeed"
                     [binary]="true"></p-checkbox>
                 <label for="autofanspeed">Automatic Fan Control</label>
-            </div>
-        </div>
-
-        <div class="col-12 md:col-4" *ngIf="form.get('overheat')?.value === 1">
-            <div class="field-checkbox">
-                <p-checkbox name="overheat_mode" formControlName="overheat_mode" inputId="overheat_mode"
-                    [binary]="true"></p-checkbox>
-                <label for="overheat_mode">Disable Overheat Mode. Make sure to reset Frequency and Voltage</label>
             </div>
         </div>
 
