fix: Set back to old password check & use dirty to show toggle

--- a/main/http_server/axe-os/src/app/components/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/components/edit/edit.component.html
@@ -15,8 +15,12 @@
         </div>
         <div class="field grid p-fluid">
             <label htmlFor="wifiPass" class="col-12 mb-2 md:col-2 md:mb-0">WiFi Password:</label>
-            <div class="col-12 md:col-10">
-                <input pInputText id="wifiPass" formControlName="wifiPass" type="password" />
+            <div class="col-12 md:col-10 p-input-icon-right">
+                <i *ngIf="form.get('wifiPass')?.dirty" class="pi" 
+                   [ngClass]="{'pi-eye': !showWifiPassword, 'pi-eye-slash': showWifiPassword}" 
+                   (click)="toggleWifiPasswordVisibility()" style="cursor: pointer;"></i>
+                <input pInputText id="wifiPass" formControlName="wifiPass" 
+                       [type]="showWifiPassword ? 'text' : 'password'" />
             </div>
         </div>
         <div class="field grid p-fluid">
@@ -46,7 +50,8 @@
         <div class="field grid p-fluid">
             <label htmlFor="stratumPassword" class="col-12 mb-2 md:col-2 md:mb-0">Stratum Password:</label>
             <div class="col-12 md:col-10 p-input-icon-right">
-                <i class="pi" [ngClass]="{'pi-eye': !showStratumPassword, 'pi-eye-slash': showStratumPassword}" 
+                <i *ngIf="form.get('stratumPassword')?.dirty" class="pi" 
+                   [ngClass]="{'pi-eye': !showStratumPassword, 'pi-eye-slash': showStratumPassword}" 
                    (click)="toggleStratumPasswordVisibility()" style="cursor: pointer;"></i>
                 <input pInputText id="stratumPassword" formControlName="stratumPassword" 
                        [type]="showStratumPassword ? 'text' : 'password'"
