--- a/main/http_server/axe-os/src/app/components/home/home.component.html
+++ b/main/http_server/axe-os/src/app/components/home/home.component.html
@@ -12,7 +12,7 @@
                             <div class="flex justify-content-between mb-3">
                                 <div>
                                     <span class="block text-500 font-medium mb-3">Hash Rate</span>
-                                    <div class="text-900 font-medium text-xl">{{info.hashRate_10m | number: '1.2-2'}}
+                                    <div class="text-900 font-medium text-xl">{{info.hashRate | number: '1.2-2'}}
                                         <small>Gh/s</small>
                                     </div>
                                 </div>
@@ -50,7 +50,7 @@
                                 <div>
                                     <span class="block text-500 font-medium mb-3">Efficiency</span>
                                     <div class="text-900 font-medium text-xl">
-                                        <td>{{info.power / (info.hashRate_10m/1000) | number: '1.2-2'}} <small>J/Th</small>
+                                        <td>{{info.power / (info.hashRate/1000) | number: '1.2-2'}} <small>J/Th</small>
                                         </td>
                                     </div>
                                 </div>
