added bm1366 back to UI, picked some other changes

--- a/main/http_server/axe-os/src/app/layout/app.menu.component.html
+++ b/main/http_server/axe-os/src/app/layout/app.menu.component.html
@@ -5,6 +5,8 @@
     </ng-container>
 
 
-    <p-button (click)="restart()" id="restart" label="Restart" severity="danger"></p-button>
+    <li id="restart-container">
+        <p-button (click)="restart()" id="restart" label="Restart" severity="danger"></p-button>
+    </li>
 
 </ul>
