--- a/main/http_server/axe-os/src/app/components/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/components/edit/edit.component.html
@@ -60,6 +60,25 @@
             </div>
         </div>
 
+        <ng-container *ngIf="!devToolsOpen && ASICModel == eASICModel.BM1366">
+
+            <div class="field grid p-fluid">
+                <label class="col-12 mb-2 md:col-2 md:mb-0" htmlFor="frequency">Frequency</label>
+                <div class="col-12 md:col-10">
+                    <p-dropdown [options]="BM1366DropdownFrequency" optionLabel="name" optionValue="value"
+                        formControlName="frequency"></p-dropdown>
+                </div>
+            </div>
+
+
+            <div class="field grid p-fluid">
+                <label class="col-12 mb-2 md:col-2 md:mb-0" htmlFor="coreVoltage">Core Voltage</label>
+                <p-dropdown class="col-12 md:col-10" [options]="BM1366CoreVoltage" optionLabel="name"
+                    optionValue="value" formControlName="coreVoltage"></p-dropdown>
+            </div>
+
+        </ng-container>
+
         <ng-container *ngIf="!devToolsOpen && ASICModel == eASICModel.BM1368">
 
             <div class="field grid p-fluid">
