--- a/main/http_server/axe-os/src/app/components/home/home.component.html
+++ b/main/http_server/axe-os/src/app/components/home/home.component.html
@@ -95,16 +95,16 @@
                 <h5>Power</h5>
                 <div class="grid text-center">
                     <div class="col-4">
-                        <p-knob [min]="30" [max]="75" [readonly]="true" [(ngModel)]="info.power"
+                        <p-knob [min]="info.minPower" [max]="info.maxPower" [readonly]="true" [(ngModel)]="info.power"
                             valueTemplate="{value}W"></p-knob>
                         Power
                     </div>
 
                     <div class="col-4">
-                        <p-knob [min]="11" [max]="13" [readonly]="true" [(ngModel)]="info.voltage"
+                        <p-knob [min]="info.minVoltage" [max]="info.maxVoltage" [readonly]="true" [(ngModel)]="info.voltage"
                             valueTemplate="{value}V"></p-knob>
                         Input Voltage
-                        <span class="danger" *ngIf="info.voltage < 4.8">&nbsp; Danger: Low voltage</span>
+                        <span class="danger" *ngIf="info.voltage < info.minVoltage">&nbsp; Danger: Low voltage</span>
                     </div>
 
                     <div class="col-4">
