--- a/main/http_server/axe-os/src/app/components/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/components/edit/edit.component.html
@@ -16,10 +16,10 @@
         <div class="field grid p-fluid">
             <label htmlFor="wifiPass" class="col-12 mb-2 md:col-2 md:mb-0">WiFi Password:</label>
             <div class="col-12 md:col-10 p-input-icon-right">
-                <i *ngIf="form.get('wifiPass')?.dirty" class="pi" 
-                   [ngClass]="{'pi-eye': !showWifiPassword, 'pi-eye-slash': showWifiPassword}" 
+                <i *ngIf="form.get('wifiPass')?.dirty" class="pi"
+                   [ngClass]="{'pi-eye': !showWifiPassword, 'pi-eye-slash': showWifiPassword}"
                    (click)="toggleWifiPasswordVisibility()" style="cursor: pointer;"></i>
-                <input pInputText id="wifiPass" formControlName="wifiPass" 
+                <input pInputText id="wifiPass" formControlName="wifiPass"
                        [type]="showWifiPassword ? 'text' : 'password'"
                        placeholder="Enter WiFi password" />
             </div>
@@ -51,10 +51,10 @@
         <div class="field grid p-fluid">
             <label htmlFor="stratumPassword" class="col-12 mb-2 md:col-2 md:mb-0">Stratum Password:</label>
             <div class="col-12 md:col-10 p-input-icon-right">
-                <i *ngIf="form.get('stratumPassword')?.dirty" class="pi" 
-                   [ngClass]="{'pi-eye': !showStratumPassword, 'pi-eye-slash': showStratumPassword}" 
+                <i *ngIf="form.get('stratumPassword')?.dirty" class="pi"
+                   [ngClass]="{'pi-eye': !showStratumPassword, 'pi-eye-slash': showStratumPassword}"
                    (click)="toggleStratumPasswordVisibility()" style="cursor: pointer;"></i>
-                <input pInputText id="stratumPassword" formControlName="stratumPassword" 
+                <input pInputText id="stratumPassword" formControlName="stratumPassword"
                        [type]="showStratumPassword ? 'text' : 'password'"
                        placeholder="Enter stratum password" />
             </div>
@@ -129,6 +129,12 @@
                 </div>
             </div>
 
+            <div class="field grid p-fluid">
+                <label htmlFor="jobInterval" class="col-12 mb-2 md:col-2 md:mb-0">Job Interval</label>
+                <div class="col-12 md:col-10">
+                    <input pInputText id="jobInterval" formControlName="jobInterval" type="number" />
+                </div>
+            </div>
         </ng-container>
 
         <div class="field grid p-fluid">
