Include warning with devToolsOpen

--- a/main/http_server/axe-os/src/app/components/settings/settings.component.scss
+++ b/main/http_server/axe-os/src/app/components/settings/settings.component.scss
@@ -33,3 +33,15 @@ select {
 a {
     color: white;
 }
+
+.pro-mode-warning {
+    background-color: #ffcccb;
+    color: #b22222;
+    border: 1px solid #b22222;
+    padding: 10px;
+    margin: 10px 0;
+    text-align: center;
+    font-weight: bold;
+    border-radius: 5px;
+  }
+  
