typo: temperatur -> temperature

--- a/main/http_server/axe-os/src/app/components/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/components/edit/edit.component.html
@@ -142,7 +142,7 @@
             <div class="col-12 md:col-10">
                 <input pInputText id="overheat_temp" formControlName="overheat_temp" type="number" />
                 <div>
-                    <small>Shutdown Temperatur in °C. To turn off use "0"</small>
+                    <small>Shutdown Temperature in °C. To turn off use "0"</small>
                 </div>
             </div>
         </div>
