added pro mode header - source: https://github.com/shufps/ESP-Miner-NerdQAxePlus/pull/43

--- a/main/http_server/axe-os/src/app/components/settings/settings.component.html
+++ b/main/http_server/axe-os/src/app/components/settings/settings.component.html
@@ -1,9 +1,14 @@
+<div *ngIf="devToolsOpen" class="pro-mode-warning">
+    <p>Warning: You are now in Pro Mode. Adjusting settings with incorrect or unsuitable values may damage the device. Proceed with caution and at your own risk.</p>
+</div>
+
 <div class="card">
     <h2>Settings</h2>
-
     <app-edit></app-edit>
+</div>
 
-
+<div *ngIf="devToolsOpen" class="pro-mode-warning">
+    <p>Warning: You are now in Pro Mode. Adjusting settings with incorrect or unsuitable values may damage the device. Proceed with caution and at your own risk.</p>
 </div>
 
 <div class="grid">
