--- a/main/http_server/axe-os/src/app/components/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/components/edit/edit.component.html
@@ -25,6 +25,12 @@
             </div>
         </div>
         <div class="field grid p-fluid">
+            <label htmlFor="ntp" class="col-12 mb-2 md:col-2 md:mb-0">NTP Server:</label>
+            <div class="col-12 md:col-10">
+                <input pInputText id="ntp" type="text" formControlName="ntp" />
+            </div>
+        </div>
+        <div class="field grid p-fluid">
             <label htmlFor="stratumURL" class="col-12 mb-2 md:col-2 md:mb-0">Stratum URL:</label>
             <div class="col-12 md:col-10">
                 <input pInputText id="stratumURL" type="text" formControlName="stratumURL"
