--- a/main/http_server/axe-os/src/app/components/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/components/edit/edit.component.html
@@ -28,6 +28,9 @@
             <label htmlFor="ntp" class="col-12 mb-2 md:col-2 md:mb-0">NTP Server:</label>
             <div class="col-12 md:col-10">
                 <input pInputText id="ntp" type="text" formControlName="ntp" />
+                <div>
+                    <small>Leave this field empty for using Stratum job time for clock syncing</small>
+                </div>
             </div>
         </div>
         <div class="field grid p-fluid">
