made ntp setting in UI optional

--- a/main/http_server/axe-os/src/app/components/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/components/edit/edit.component.html
@@ -29,7 +29,7 @@
             <div class="col-12 md:col-10">
                 <input pInputText id="ntp" type="text" formControlName="ntp" />
                 <div>
-                    <small>Leave this field empty for using Stratum job time for clock syncing</small>
+                    <small>Leave this field empty for syncing the system time from Stratum jobs</small>
                 </div>
             </div>
         </div>
