--- a/main/http_server/axe-os/src/app/components/edit/edit.component.scss
+++ b/main/http_server/axe-os/src/app/components/edit/edit.component.scss
@@ -3,3 +3,20 @@
     font-size: 1.5rem;
     top: 1rem;
 }
+
+::ng-deep .p-panel {
+    margin-bottom: 20px;
+}
+
+::ng-deep .custom-section-title {
+    font-family: var(--font-family);
+    font-feature-settings: var(--font-feature-settings, normal);
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--primary-color);
+    padding: 10px 0;
+    margin-bottom: 10px;
+    padding-left: 15px;
+    //border-bottom: 2px solid var(--primary-color);
+    border-bottom: 1px solid #304562;
+}
