--- a/main/http_server/axe-os/src/app/components/edit/edit.component.scss
+++ b/main/http_server/axe-os/src/app/components/edit/edit.component.scss
@@ -4,11 +4,7 @@
     top: 1rem;
 }
 
-::ng-deep .p-panel {
-    margin-bottom: 20px;
-}
-
-::ng-deep .custom-section-title {
+.custom-section-title {
     font-family: var(--font-family);
     font-feature-settings: var(--font-feature-settings, normal);
     font-size: 1rem;
@@ -17,6 +13,5 @@
     padding: 10px 0;
     margin-bottom: 10px;
     padding-left: 15px;
-    //border-bottom: 2px solid var(--primary-color);
-    border-bottom: 1px solid #304562;
+    border-bottom: 2px solid #304562;
 }
