--- a/main/http_server/axe-os/src/app/pages/swarm/swarm.component.scss
+++ b/main/http_server/axe-os/src/app/pages/swarm/swarm.component.scss
@@ -1,3 +1,8 @@
+@import '../../@theme/styles/themes';
+@import 'bootstrap/scss/mixins/breakpoints';
+//@import '~@nebular/theme/styles/global/_breakpoints';
+
+@include nb-install-component() {
 form {
     margin-bottom: 20px;
 }
@@ -52,5 +57,77 @@ a {
     right: 20px;
     top: 20px;
     cursor: pointer;
+}
+
+.table-container {
+    width: 100%;
+    overflow-x: auto;
+    margin: 0;
+
+    table {
+        min-width: 100%;
+        white-space: nowrap;
+
+        th, td {
+            padding: 0.75rem;
+            text-align: left;
+
+            @media (max-width: 1150px) {
+                padding: 0.5rem;
+            }
+        }
+    }
+}
+button {
+    margin-right:20px;
+}
+
+nb-slider {
+    width: 100%;
+}
+
+.progress-wrap {
+    position: relative;
+    height: 1rem;
+}
+
+.progress-foreground {
+    background-color: nb-theme(color-primary-default);
+    height: 5px;
+    position: absolute;
+    left: 0;
+    margin-top: calc(0.75rem - 1px);
+    width: 100px;
+}
+
+.progress {
+    appearance: none;
+    width: 100%;
+    background: transparent;
+    height: 1.5rem;
+    outline: none;
+    position: absolute;
+
+    @include install-thumb() {
+        width: 1rem;
+        height: 1rem;
+        border-radius: 50%;
+        background: nb-theme(color-primary-default);
+        cursor: pointer;
+        margin-top: calc(-0.5rem + 1px + 1.25px);
+        border: none;
+    }
+
+    @include install-track() {
+        width: 100%;
+        height: 2px;
+        cursor: pointer;
+        background: nb-theme(border-basic-color-3);
+    }
+}
+.text-primary {
+    font-weight: bold;
+    color: var(--text-primary-color);
+}
 }
 
