--- a/main/http_server/axe-os/src/app/pages/swarm/swarm.component.scss
+++ b/main/http_server/axe-os/src/app/pages/swarm/swarm.component.scss
@@ -129,5 +129,25 @@ nb-slider {
     font-weight: bold;
     color: var(--text-primary-color);
 }
+
+.text-orange-500 {
+    color: var(--bs-orange);
+}
+
+.text-red-500 {
+    color: var(--bs-red);
+}
+
+.text-purple-500 {
+    color: var(--bs-purple);
+}
+
+.text-blue-500 {
+    color: var(--bs-blue);
+}
+
+.text-green-500 {
+    color: var(--bs-green);
+}
 }
 
